MDEV-12601 Hybrid functions create a column of an impossible type DOUBLE(256,4)